# Cracking

./: .gitignore  CMakeLists.txt  doubly_linked_list.cpp  linked_list.cpp  linked_list.py  majority.py  remove_element.cpp  remove_element.py  singly_linked_list.cpp
